# vapoursynth4-rs

./: .gitignore  .harper-dictionary.txt  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
sample-plugin/: Cargo.toml  test.vpy
sample-plugin/src/: dither.rs  lib.rs  splice.rs
sample-plugin/tests/: vspipe.rs
scripts/: build-vs.ps1  build-vs.sh  build-vs.slnf  setup.py
vapoursynth4-rs/: CHANGELOG.md  Cargo.toml  README.md
vapoursynth4-rs-macros/: Cargo.toml
vapoursynth4-rs-macros/src/: lib.rs
vapoursynth4-rs/src/: api.rs  constants.rs  core.rs  error.rs  frame.rs  function.rs  lib.rs  map.rs  node.rs  plugin.rs  sciprt.rs  utils.rs
vapoursynth4-rs/src/frame/: context.rs  format.rs
vapoursynth4-rs/src/map/: key.rs
vapoursynth4-rs/src/node/: constants.rs  dependency.rs  filter.rs  internal.rs
vapoursynth4-rs/src/plugin/: plugin_function.rs  types.rs
vapoursynth4-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
vapoursynth4-sys/src/: constants.rs  helper.rs  lib.rs  vs.rs  vsscript.rs
