[package]
name = "sample-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
vapoursynth4-rs = {version = "0.1.0", path = "../vapoursynth4-rs"}
vapoursynth4-sys = {version = "0.1.0", path = "../vapoursynth4-sys"}
const-str = "0.5.6"
