[package]
name = "sample-plugin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
vapoursynth4-rs = { version = "0.5.0", path = "../vapoursynth4-rs", features = [
  "link-library", # for tests
] }


[dev-dependencies]
testresult = "0.4.1"
