[package]
name = "vapoursynth4-rs-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for vapoursynth4-rs"
license = "MPL-2.0"

repository = "https://github.com/inflation/vapoursynth4-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.31", features = ["full"] }
vapoursynth4-sys = {version = "0.1.0", path = "../vapoursynth4-sys"}

[dev-dependencies]

[lib]
proc-macro = true
