[package]
name = "vapoursynth4-rs"
version = "0.2.0"
edition = "2021"
authors = ["Inflation <me@shimotsuki.ink>"]
description = "A safe wrapper for VapourSynth and VSScript API version 4"
license = "MPL-2.0"

repository = "https://github.com/inflation/vapoursynth4-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.47"
vapoursynth4-sys = {version = "0.2.0", path = "../vapoursynth4-sys"}
# vapoursynth4-rs-macros = { version = "0.1.0", path = "../vapoursynth4-rs-macros", optional = true}

[dev-dependencies]
const-str = "0.5.6"
testresult = "0.4.0"

[features]
link-library = ["vapoursynth4-sys/link-library"]
# default = ["macros"]
# macros = ["vapoursynth4-rs-macros"]
