[package]
name = "vapoursynth4-rs"
version = "0.4.0"
edition = "2021"
authors = ["Inflation <rust@kosmopho.dev>"]
description = "A safe wrapper for VapourSynth and VSScript API version 4"
license = "MPL-2.0"

repository = "https://github.com/inflation/vapoursynth4-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bon = "3.3.0"
thiserror = "2.0.0"
vapoursynth4-sys = { version = "0.3.0", path = "../vapoursynth4-sys"}
# vapoursynth4-rs-macros = { version = "0.1.0", path = "../vapoursynth4-rs-macros", optional = true}

[dev-dependencies]
const-str = "0.5.6"
testresult = "0.4.0"

[features]
link-library = ["vapoursynth4-sys/link-library"]
# default = ["macros"]
# macros = ["vapoursynth4-rs-macros"]

[lints.clippy]
pedantic = "warn"
