[package]
name = "vapoursynth4-rs"
version = "0.4.0"
edition = "2024"
description = "A safe wrapper for VapourSynth and VSScript API version 4"
license = "MPL-2.0"

repository = "https://github.com/inflation/vapoursynth4-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bon = "3.8.2"
thiserror = "2.0.18"
vapoursynth4-sys = { version = "0.3.2", path = "../vapoursynth4-sys"}

[dev-dependencies]
const-str = "1.1.0"
testresult = "0.4.1"

[features]
default = ["vs-41", "vsscript", "vsscript-42"]
link-vs = ["vapoursynth4-sys/link-vs"]
link-vsscript = ["vapoursynth4-sys/link-vsscript"]
vs-41 = ["vapoursynth4-sys/vs-41"]
vsscript = ["vapoursynth4-sys/vsscript"]
vsscript-42 = ["vapoursynth4-sys/vsscript-42"]
vs-graph = ["vapoursynth4-sys/vs-graph"]


[lints.clippy]
pedantic = "warn"
