[package]
name = "vapoursynth4-sys"
edition = "2021"
version = "0.2.0"
authors = ["Inflation <me@shimotsuki.ink>"]
description = "Rust bindings for VapourSynth and VSScript API version 4"
license = "MPL-2.0"

repository = "https://github.com/inflation/vapoursynth4-rs"
documentation = "https://docs.rs/vapoursynth4-sys"
keywords = ["vapoursynth", "vsscript", "video", "bindings"]
categories = ["external-ffi-bindings", "multimedia::video"]

[dependencies]
cc = { version = "1.0.83", optional = true }

[features]
# Features for enabling higher API versions.
vs-41 = []

vsscript = []
vsscript-42 = []

# Experimental features.
vs-graph = []

# Link the VapourSynth library
link-library = []

default = ["vs-41", "vsscript", "vsscript-42", "vs-graph"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[lints.clippy]
pedantic = "warn"
