[package]
name = "vapoursynth4-sys"
version = "0.3.2+R73"
edition = "2024"
description = "Rust bindings for VapourSynth and VSScript API version 4"
documentation = "https://docs.rs/vapoursynth4-sys"
repository = "https://github.com/inflation/vapoursynth4-rs"
license = "MPL-2.0"
keywords = ["vapoursynth", "vsscript", "video", "bindings"]
categories = ["external-ffi-bindings", "multimedia::video"]

[dependencies]
cc = { version = "1.2.48", optional = true }

[features]
# Features for enabling higher API versions.
vs-41 = []

vsscript = [] # Base VSScript version is 4.1
vsscript-42 = []

# Experimental features.
vs-graph = []

# Link the VS library
link-vs = []
# Link the VSScript library
link-vsscript = []

default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[lints.clippy]
pedantic = "warn"
cast_possible_wrap = "allow"
